1. Using glyphicons for comments actions images 2. Additional check, is user able to create new comment 3. Bugfix: new top-level comments appears with «answer» link (TODO: remove it after first reply) 4. Methods for editing comments by moderators 5. Bugfix: CSRF-token in mark-comment-as-incorrect link

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -472,6 +472,12 @@ li.li-success {
 	font-size: 10pt;
 }
 
+.comments .comment .comment__header .glyphicon,
+.comments .comment .comment__footer .glyphicon:not(.glyphicon-heart){
+	font-size: 80%;
+	margin-left: 3px;
+}
+
 .comments .comment .comment__header > div,
 .comments .comment .comment__footer > div {
     display: inline-block;
@@ -592,10 +598,6 @@ li.li-success {
 
 .comments .comment .comment__footer .comment__mark-as-correct-link * {
 	color: #8b0000;
-}
-
-.comments .comment .comment__correct-answer .comment__mark-as-correct-link {
-	margin-left: 3px;
 }
 
 .comments .comment .comment__correct-answer .comment__mark-as-correct-link * {
