--- a/src/uLearn.Web/Content/notifications.css
+++ b/src/uLearn.Web/Content/notifications.css
@@ -38,6 +38,57 @@
 	}
 }
 
+.notifications__feed-switcher {
+	white-space: nowrap;
+}
+
+.notifications__feed-switcher a {
+	display: inline-block;
+	font-size: 16px;
+	padding: 10px;
+	width: 50%;
+	text-align: center;
+	white-space: normal;
+	border-bottom: 1px solid #ddd;
+	border-right: 1px solid #ddd;
+	color: #337ab7;
+	font-weight: 600;
+}
+
+.notifications__feed-switcher a.active {
+	color: #111;
+	border-bottom-width: 0;
+	pointer-events: none;
+}
+
+.notifications__feed-switcher a .label {
+	margin-left: 5px;
+	position: relative;
+	top: -1px;
+}
+
+.notifications__feed-switcher a.active .label {
+	background-color: #666;
+}
+
+.notifications__feed {
+	display: none;
+}
+
+.notifications__feed.active {
+	display: block;
+}
+
+.notifications__feed-switcher a:hover,
+.notifications__feed-switcher a:active,
+.notifications__feed-switcher a:focus {
+	text-decoration: none;
+}
+
+.notifications__feed-switcher a:not(.active):hover {
+	background-color: #f6f6f6;
+}
+
 .notifications__notifications-wrapper {
 	max-height: 300px;
 	overflow-y: auto;
@@ -81,7 +132,7 @@
 .notifications__notifications-wrapper::-webkit-scrollbar-thumb {
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
-	background: #eee;
+	background: #f6f6f6;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
 
@@ -100,20 +151,25 @@
 }
 
 .notifications__notification:hover {
-	background-color: #eee;
+	background-color: #f6f6f6;
 	cursor: pointer;
 }
 
 .notifications__notification.unread:hover {
-	background-color: #e0f3f3;
+	background-color: #e0f6f6;
 }
-	
+
+
 .notifications__notification__footer {
 	color: #bbb;
 }
 
 .notifications__notification__user {
-	font-weight: bold;
+	font-weight: 600;
+}
+
+.notifications__notification b {
+	font-weight: 600;
 }
 
 .notifications__comment-notification__cite {
@@ -121,7 +177,7 @@
 }
 
 .notifications__comment-notification__text {
-	_font-weight: bold;
+	_font-weight: 600;
 }
 
 .notifications__all-notifications-link {
@@ -130,10 +186,11 @@
 	background-color: white;
 	color: #336;
 	border-top: 1px solid #eee;
+	font-weight: 600;
 }
 
 .notifications__all-notifications-link:hover {
-	background-color: #eee;
+	background-color: #f6f6f6;
 }
 	
 .notifications__all-notifications-link a {
