--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -40,6 +40,7 @@
 	{
 		<h1>Загруженные версии</h1>
 		<div class="courses-versions">
+			@Html.AntiForgeryToken()
 			@foreach (var version in Model.Versions)
 			{
 				var isCurrentVersion = Model.PublishedVersion != null && version.Id == Model.PublishedVersion.Id;
@@ -65,7 +66,7 @@
 							{
 								using (Html.BeginForm("DeleteVersion", "Admin", new { Model.CourseId, versionId = version.Id }, FormMethod.Post))
 								{
-									@Html.AntiForgeryToken()
+									@Html.Hidden("__RequestVerificationToken")
 									<input type="submit" class="btn btn-xs btn-danger" value="&times;" title="Удалить"/>
 								}
 							}
